--- a/src/services/CMakeLists.txt
+++ b/src/services/CMakeLists.txt
@@ -14,4 +14,5 @@ endif( LIBMYGPO_QT_FOUND )
 if( LIBLASTFM_FOUND )
 	add_subdirectory( lastfm )
 endif( LIBLASTFM_FOUND )
+add_subdirectory( grooveshark )
 add_subdirectory( opmldirectory )
