Change codebase to something more usefull to me :)

--- a/src/services/grooveshark/images/CMakeLists.txt
+++ b/src/services/grooveshark/images/CMakeLists.txt
@@ -1,5 +1,5 @@
 install(
         FILES
-        hover_info_lastfm.png
+        hover_info_grooveshark.png
         DESTINATION ${DATA_INSTALL_DIR}/amarok/images
 )
