--- a/src/services/grooveshark/CMakeLists.txt
+++ b/src/services/grooveshark/CMakeLists.txt
@@ -1,106 +1,85 @@
-remove_definitions(-DQT_USE_FAST_CONCATENATION)
-remove_definitions(-DQT_USE_FAST_OPERATOR_PLUS)
-
-
 include_directories(
-        ../
-        ../../
-        ../../core-impl/collections
-        ../../statusbar
-        ../../widgets
-        ../../context
-        ../../network
-        ../../dynamic # for CustomBias.h
-        ../../browsers/playlistbrowser # for DynamicBiasWidgets
-        ${CMAKE_CURRENT_BINARY_DIR}/../.. #for amarokconfig.h
-        ${KDE4_INCLUDE_DIR}
-        ${STRIGI_INCLUDE_DIR}
-        ${QJSON_INCLUDE_DIR}
-        ${QT_INCLUDES}
-        lib
-        #${LIBLASTFM_INCLUDE_DIR}/.. # so lastfm/foo/bar.h references work
-        #${LIBLASTFM_INCLUDE_DIR}
-        )
+    ../
+    ../../
+    ../../core-impl/collections
+    ../../servicebrowser
+    ../../statusbar
+    ${CMAKE_CURRENT_BINARY_DIR}/../../..
+    ${KDE4_INCLUDE_DIR}
+    ${STRIGI_INCLUDE_DIR}
+    ${QT_INCLUDES}
+    grooveshark
+)
 
-        add_subdirectory( images )
+add_subdirectory( images )
 
 ########### next target ###############
 
-        add_definitions(${KDE4_ENABLE_EXCEPTIONS})
+set(amarok_service_grooveshark_PART_SRCS
+    grooveshark/QGrooveshark.cpp
+    grooveshark/QGroovesharkPlaylist.cpp
+    grooveshark/QGroovesharkSearch.cpp
+    grooveshark/QGroovesharkSong.cpp
+    GroovesharkActions.cpp
+    GroovesharkAlbumDownloader.cpp
+    GroovesharkCollectionLocation.cpp
+    GroovesharkConfig.cpp
+    GroovesharkDatabaseHandler.cpp
+    GroovesharkDatabaseWorker.cpp
+    GroovesharkDownloadDialog.cpp
+    GroovesharkDownloadInfo.cpp
+    GroovesharkInfoParser.cpp
+    GroovesharkMeta.cpp
+    GroovesharkDownloadHandler.cpp
+    GroovesharkRedownloadDialog.cpp
+    GroovesharkRedownloadHandler.cpp
+    GroovesharkSqlCollection.cpp
+    GroovesharkStore.cpp
+    GroovesharkUrlRunner.cpp
+    GroovesharkXmlParser.cpp
 
-        set(amarok_service_grooveshark_PART_SRCS
-            lib/QGrooveshark.cpp
-            lib/QGroovesharkPlaylist.cpp
-            lib/QGroovesharkSearch.cpp
-            lib/QGroovesharkSong.cpp
-            GroovesharkService.cpp
-            GroovesharkServiceCollection.cpp
-            GroovesharkServiceConfig.cpp
-            GroovesharkServiceQueryMaker.cpp
-            #LastfmReadLabelCapability.cpp
-            #ScrobblerAdapter.cpp
-            GroovesharkTreeModel.cpp
-            GroovesharkTreeView.cpp
-            AvatarDownloader.cpp
+)
 
-            meta/GroovesharkMeta.cpp
-            meta/GroovesharkStreamInfoCapability.cpp
+kde4_add_ui_files( amarok_service_grooveshark_PART_SRCS
+    GroovesharkDownloadDialogBase.ui
+    GroovesharkRedownloadDialogBase.ui
+    GroovesharkSignupDialogBase.ui
 
-            biases/GroovesharkBias.cpp
-            biases/WeeklyTopBias.cpp
+)
 
-            #SimilarArtistsAction.cpp
-            LoveTrackAction.cpp
-        )
+kde4_add_plugin(amarok_service_grooveshark ${amarok_service_grooveshark_PART_SRCS})
+target_link_libraries(amarok_service_grooveshark
+    amarokcore
+    amaroklib
+    amarokpud
+    ${KDE4_KDECORE_LIBS}
+    ${KDE4_KDEUI_LIBS}
+    ${KDE4_KIO_LIBS}
+    ${KDE4_THREADWEAVER_LIBRARIES}
+)
 
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${KDE4_ENABLE_EXCEPTIONS}")
-        remove_definitions(-DQT_NO_HTTP)
 
-        kde4_add_plugin(amarok_service_grooveshark ${amarok_service_grooveshark_PART_SRCS})
-        target_link_libraries(amarok_service_grooveshark
-            amarokcore
-            amaroklib
-            amarokpud
-            #${LIBLASTFM_LIBRARY}
-            ${KDE4_KDECORE_LIBS}
-            ${KDE4_KDEUI_LIBS}
-            ${KDE4_KIO_LIBS}
-            ${KDE4_SOLID_LIBRARY}
-            ${KDE4_THREADWEAVER_LIBRARIES}
-            ${QT_QTNETWORK_LIBRARY}
-            ${QJSON_LIBRARIES}
-        )
-
-        install(TARGETS amarok_service_grooveshark DESTINATION ${PLUGIN_INSTALL_DIR} )
+install(TARGETS amarok_service_grooveshark DESTINATION ${PLUGIN_INSTALL_DIR} )
 
 ########### next target ###############
 
-        set(kcm_amarok_service_grooveshark_PART_SRCS
-            GroovesharkServiceSettings.cpp
-            GroovesharkServiceConfig.cpp
-        )
+set(kcm_amarok_service_grooveshark_PART_SRCSS
+    GroovesharkSettingsModule.cpp
+    GroovesharkConfig.cpp
+)
 
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${KDE4_ENABLE_EXCEPTIONS}")
-
-        kde4_add_ui_files( kcm_amarok_service_grooveshark_PART_SRCS GroovesharkConfigWidget.ui )
+kde4_add_ui_files( kcm_amarok_service_grooveshark_PART_SRCSS GroovesharkConfigWidget.ui )
 
 
-        kde4_add_plugin( kcm_amarok_service_grooveshark ${kcm_amarok_service_grooveshark_PART_SRCS} )
+kde4_add_plugin( kcm_amarok_service_grooveshark ${kcm_amarok_service_grooveshark_PART_SRCSS} )
 
-        target_link_libraries( kcm_amarok_service_grooveshark
-            amarokcore
-            amaroklib
-            #${LIBLASTFM_LIBRARY}
-            ${KDE4_KDEUI_LIBS}
-            ${KDE4_KUTILS_LIBS}
-            ${KDE4_KIO_LIBS}
-            ${QT_QTNETWORK_LIBRARY} )
 
-        install(TARGETS kcm_amarok_service_grooveshark  DESTINATION ${PLUGIN_INSTALL_DIR})
+target_link_libraries( kcm_amarok_service_grooveshark  ${KDE4_KUTILS_LIBS} ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${KDE4_KDECORE_LIBRARY} ${KDE4_KDEUI_LIBS} )
+
+install(TARGETS kcm_amarok_service_grooveshark  DESTINATION ${PLUGIN_INSTALL_DIR})
+
 
 ########### install files ###############
 
-        install( FILES amarok_service_grooveshark.desktop DESTINATION ${SERVICES_INSTALL_DIR} )
-        install( FILES amarok_service_grooveshark_config.desktop DESTINATION ${SERVICES_INSTALL_DIR} )
-        install(FILES amarokgrooveshark.protocol DESTINATION ${SERVICES_INSTALL_DIR})
-
+install( FILES amarok_service_grooveshark.desktop DESTINATION ${SERVICES_INSTALL_DIR})
+install( FILES amarok_service_grooveshark_config.desktop DESTINATION ${SERVICES_INSTALL_DIR})
